# Nova

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.nova
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
nova-build/: out.asm
src/: main.cpp
src/Asm_Generation/: Generate.cpp  Generate.h  LinuxAsm.cpp  LinuxAsm.h
src/Error_Classes/: Base_Error.cpp  Errors.h  Illegal_Char_Error.cpp
src/Errors/: Base_Error.cpp  Errors.h  Illegal_Char_Error.cpp  Parser_Error.cpp
src/Lexer/: Lexer.cpp  Lexer.h  Token.h
src/Lexical_Analysis/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/Parser/: Parser.cpp  Parser.h  grammar.md
src/Syntax_Tree/: Parser.cpp  Parser.h
src/Timer/: Timer.cpp  Timer.h
src/Timing/: Timer.cpp  Timer.h
